SLS-112: Implement delte view for monobank token
